// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseXmlToOldTextTree > parses ai startup kit home page.xml correctly > xml 1`] = `
"<Container>
</Container>
"
`;

exports[`parseXmlToOldTextTree > parses ai startup kit home page.xml for  migrated.xml correctly > xml 1`] = `
"<Container>
  <Hero>
    <Header>
      <Stack>
        <AI_Kit_Badge nodeId="kvaze3i5">
        </AI_Kit_Badge>
        <text>
          <Container nodeId="BmPmnKu3U" fontSize="82px">
          </Container>
          <Container nodeId="Ga6gDXZIe" fontSize="20px">
          </Container>
        </text>
        <AI_Kit_Button nodeId="rgayf1f9">
        </AI_Kit_Button>
      </Stack>
    </Header>
  </Hero>
  <Companies>
    <text nodeId="y8xplxOnV" fontSize="16px">
    </text>
    <Grid>
      <Stack>
        <Container>
          <Stack>
            <text nodeId="vnzxmNCxb">
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text nodeId="DRefZ4FzF">
            </text>
          </Stack>
        </Container>
      </Stack>
    </Grid>
  </Companies>
  <Features>
    <Stack>
      <text nodeId="C9Wau5gv1" fontSize="32px">
      </text>
    </Stack>
    <Grid>
      <Card>
        <Container>
          <Stack>
            <text>
              <Container nodeId="M2ZPHDqe6" fontSize="16px">
              </Container>
              <Container nodeId="UMkipYqxL" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="kKZ8P977O" fontSize="16px">
              </Container>
              <Container nodeId="JxpYmedKj" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="kxskj_v2Y" fontSize="16px">
              </Container>
              <Container nodeId="HybKQJqce" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="Lf5rDin2b" fontSize="16px">
              </Container>
              <Container nodeId="h1vQET5E8" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
      </Card>
    </Grid>
  </Features>
</Container>
"
`;

exports[`parseXmlToOldTextTree > parses ai startup kit home page.xml for framer.com migrated.xml correctly > xml 1`] = `
"<Container>
  <Hero>
    <Header>
      <Stack>
        <AI_Kit_Badge nodeId="kvaze3i5">
        </AI_Kit_Badge>
        <text>
          <Container nodeId="BmPmnKu3U" fontSize="82px">
          </Container>
          <Container nodeId="Ga6gDXZIe" fontSize="20px">
          </Container>
        </text>
        <AI_Kit_Button nodeId="rgayf1f9">
        </AI_Kit_Button>
      </Stack>
    </Header>
  </Hero>
  <Companies>
    <text nodeId="y8xplxOnV" fontSize="16px">
    </text>
    <Grid>
      <Stack>
        <Container>
          <Stack>
            <text nodeId="vnzxmNCxb">
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text nodeId="DRefZ4FzF">
            </text>
          </Stack>
        </Container>
      </Stack>
    </Grid>
  </Companies>
  <Features>
    <Stack>
      <text nodeId="C9Wau5gv1" fontSize="32px">
      </text>
    </Stack>
    <Grid>
      <Card>
        <Container>
          <Stack>
            <text>
              <Container nodeId="M2ZPHDqe6" fontSize="16px">
              </Container>
              <Container nodeId="UMkipYqxL" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="kKZ8P977O" fontSize="16px">
              </Container>
              <Container nodeId="JxpYmedKj" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="kxskj_v2Y" fontSize="16px">
              </Container>
              <Container nodeId="HybKQJqce" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
        <Container>
          <Stack>
            <text>
              <Container nodeId="Lf5rDin2b" fontSize="16px">
              </Container>
              <Container nodeId="h1vQET5E8" fontSize="16px">
              </Container>
            </text>
          </Stack>
        </Container>
      </Card>
    </Grid>
  </Features>
</Container>
"
`;

exports[`parseXmlToOldTextTree > parses ai startup kit nav.xml correctly > xml 1`] = `
"<AI_Kit_Nav>
  Features
			
			
				Developers
			
			
				Brand
			
			
				Blog
			
			
				Contact
			
		
		
			
				Sign up for free
  <Navigation>
    Features
			
			
				Developers
			
			
				Brand
			
			
				Blog
			
			
				Contact
			
		
		
			
				Sign up for free
    <Stack>
      Features
			
			
				Developers
			
			
				Brand
			
			
				Blog
			
			
				Contact
      <AI_Kit_Navigation_Nav_Top_Item nodeId="w2keh4di">
        Features
      </AI_Kit_Navigation_Nav_Top_Item>
      <AI_Kit_Navigation_Nav_Top_Item nodeId="f9jqiq3c">
        Developers
      </AI_Kit_Navigation_Nav_Top_Item>
      <AI_Kit_Navigation_Nav_Top_Item nodeId="ttyq47m7">
        Brand
      </AI_Kit_Navigation_Nav_Top_Item>
      <AI_Kit_Navigation_Nav_Top_Item nodeId="5mjfkk9h">
        Blog
      </AI_Kit_Navigation_Nav_Top_Item>
      <AI_Kit_Navigation_Nav_Top_Item nodeId="phn7sz8d">
        Contact
      </AI_Kit_Navigation_Nav_Top_Item>
    </Stack>
    <Stack>
      Sign up for free
      <AI_Kit_Button nodeId="koeyy0nt">
        Sign up for free
      </AI_Kit_Button>
    </Stack>
  </Navigation>
</AI_Kit_Nav>
"
`;

exports[`parseXmlToOldTextTree > parses ai startup kit nav.xml for  migrated.xml correctly > xml 1`] = `
"<AI_Kit_Nav>
  <Navigation>
    <Stack>
      <Container>
        <AI_Kit_Navigation_Nav_Top_Item>
          <Container nodeId="w2keh4di">
          </Container>
          <Container nodeId="f9jqiq3c">
          </Container>
          <Container nodeId="ttyq47m7">
          </Container>
          <Container nodeId="5mjfkk9h">
          </Container>
          <Container nodeId="phn7sz8d">
          </Container>
        </AI_Kit_Navigation_Nav_Top_Item>
      </Container>
      <Container>
        <AI_Kit_Button nodeId="koeyy0nt">
        </AI_Kit_Button>
      </Container>
    </Stack>
  </Navigation>
</AI_Kit_Nav>
"
`;

exports[`parseXmlToOldTextTree > parses ai startup kit nav.xml for framer.com migrated.xml correctly > xml 1`] = `
"<AI_Kit_Nav>
  <Navigation>
    <Stack>
      <Container>
        <AI_Kit_Navigation_Nav_Top_Item>
          <Container nodeId="w2keh4di">
          </Container>
          <Container nodeId="f9jqiq3c">
          </Container>
          <Container nodeId="ttyq47m7">
          </Container>
          <Container nodeId="5mjfkk9h">
          </Container>
          <Container nodeId="phn7sz8d">
          </Container>
        </AI_Kit_Navigation_Nav_Top_Item>
      </Container>
      <Container>
        <AI_Kit_Button nodeId="koeyy0nt">
        </AI_Kit_Button>
      </Container>
    </Stack>
  </Navigation>
</AI_Kit_Nav>
"
`;
